contrib/cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/UnresolvedIdentifierTest/iz161565.cpp
int iz161565_main(int argc, char** argv) {
    return iz161565_not_yet_decalred_symbol();
}

int iz161565_not_yet_decalred_symbol() {
    return 0;
}
